--- a/IcyImeNetwork/IcyImeNetwork.csproj
+++ b/IcyImeNetwork/IcyImeNetwork.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageReference Include="BlazorTransitionableRoute" Version="4.0.0" />
+    <PackageReference Include="Blazorise.Animate" Version="1.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.11" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0" />
